# thrift

./: .gitignore  WORKSPACE
compiler/cpp/: BUILD.bazel  CMakeLists.txt  Makefile.am
compiler/cpp/src/thrift/: thriftl.cc  thrifty.cc  thrifty.hh
compiler/cpp/src/thrift/generate/: t_kotlin_generator.cc
lib/cpp/test/: SecurityFromBufferTest.cpp  SecurityTest.cpp
lib/kotlin/: JavaTypes.thrift  build.ps1  build.sh  gradle.properties  settings.gradle
lib/kotlin/app/: build.gradle
lib/kotlin/app/src/main/kotlin/com/testing/: Main.kt
lib/kotlin/app/src/main/kotlin/com/testing/api/: A.kt  ABCombiner.kt  B.kt  ChildAll.kt  Error.kt  ErrorCodes.kt  HelloAll.kt  MyTestService.kt  testOneRequest.kt  testOneResponse.kt  unsupportedName.kt
lib/kotlin/lib/: build.gradle  settings.gradle
lib/kotlin/lib/src/main/kotlin/org/apache/thrift/: AsyncClosable.kt  AsyncProcessFunction.kt  BitUtils.kt  CharExtensions.kt  EncodingUtils.kt  FutureHelper.kt  Option.kt  ProcessFunction.kt  StringExtensions.kt  TApplicationException.kt  TAsyncBaseProcessor.kt  TAsyncClient.kt  TBase.kt  TBase64Utils.kt  TBaseHelper.kt  TBaseProcessor.kt  TByteArrayOutputStream.kt  TConfiguration.kt  TEnum.kt  TException.kt  TFieldIdEnum.kt  TFieldRequirementType.kt  TProcessor.kt  TProcessorFactory.kt  TSerializable.kt  TServiceClient.kt  TServiceClientFactory.kt  TUnion.kt
test/: Makefile.am  tests.json
test/kotlin/: Makefile.am  build.gradle  settings.gradle
test/kotlin/client/: build.gradle
test/kotlin/server/: build.gradle
(+59 files in other folders)
